[package]
name = "proj-sys"
description = "Rust bindings for PROJ v7.0.x"
repository = "https://github.com/georust/proj-sys"
version = "0.16.5"
readme = "README.md"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
keywords = ["proj", "projection", "osgeo", "geo", "geospatial"]
license = "MIT/Apache-2.0"
edition = "2018"
links = "proj"

[dependencies]

[build-dependencies]
bindgen = "0.52.0"
pkg-config = "0.3.17"
cmake = "0.1.43"
flate2 = "1.0.14"
tar = "0.4.26"

[features]
nobuild = []
pkg_config = []
bundled_proj = []

[target.'cfg(all(not(feature = "pkg_config"), feature = "bundled_proj", target_os = "linux", not(feature = "nobuild")))']
rustflags = ["-C", "default-linker-libraries"]

[package.metadata.docs.rs]
features = [ "nobuild" ] # This feature will be enabled during the docs.rs build
